Prevent key text clipping;
The width of track-details-right should have been removed
when the styling of the columns was updated previously.

--- a/packages/front/src/Tracks.css
+++ b/packages/front/src/Tracks.css
@@ -172,7 +172,6 @@
   }
 
   .track-details-right {
-    width: 25%;
     display: flex;
     flex-direction: column;
   }
